--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,34 @@
-.App {
+/* .App_old {
   text-align: center;
 }
 
-.App-logo {
+.App_old-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .App_old-logo {
+    animation: App_old-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
+.App_old-header {
+  background-color: #4CAF50;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: red;
 }
 
-.App-link {
+.App_old-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes App_old-logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   }
 }
+
+#sensor-data {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#sensor-data td, #sensor-data th {
+  border: 1px solid rgb(15, 15, 15);
+  padding: 8px;
+}
+
+#sensor-data th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: rgb(15, 17, 121);
+  color: white;
+} */
