--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,47 @@
 .select-items div:hover, .same-as-selected {
     background-color: rgba(0, 0, 0, 0.1);
 }
+
+body {
+  margin: 0;
+  padding: 0;
+    background: url(https://e0.365dm.com/20/04/2048x1152/skysports-football-etihad-premier_4960389.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.box select {
+    font-family: "Trebuchet MS", sans-serif;
+  background-color: white;
+  color: black;
+  padding: 4px;
+  width: 100px;
+  border: none;
+  font-size: 14px;
+  -webkit-appearance: button;
+  outline: none;
+}
+
+.box::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20%;
+  height: 20%;
+  text-align: center;
+  font-size: 6px;
+  line-height: 10px;
+  color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.1);
+  pointer-events: none;
+}
+
+.box:hover::before {
+  color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.box select option {
+  padding: 4px;
+}
